# hsm

./: .gitattributes  .gitignore  LICENSE.txt  README.md  VERSION.md  VERSION.txt  library.json
examples/hsm_book_samples/: build_msys2.sh
examples/hsm_book_samples/source/ch2/: ownership_access_owner_privates.cpp  process_state_transitions.cpp  simplest_state_machine.cpp  state_onenter_onexit.cpp  storing_data.cpp  update_states.cpp
examples/hsm_book_samples/source/ch3/: drawing_hsms.cpp  inner_entry_transition.cpp  inner_transition.cpp  revisit_update_states.cpp
examples/hsm_book_samples/source/ch4/: cluster_root_state_data_2.cpp  parallel_state_machines.cpp  shared_states_unrelated_owners.cpp  state_overrides.cpp
examples/hsm_book_samples/source/ch5/: cluster_root_clean_up.cpp
include/: hsm.h
include/hsm/: config.h  rtti.h  state.h  statemachine.h  transition.h  utils.h
samples/hsm_book_samples/: .gitignore  CMakeLists.txt  README.md  build_msys2.sh
samples/hsm_book_samples/source/ch2/: improving_readability.cpp  ownership_basic_usage.cpp  ownership_easier_owner_access.cpp  state_onenter_onexit.cpp  states_and_transitions.cpp  update_states.cpp
samples/hsm_book_samples/source/ch3/: drawing_hsms_clusters.cpp  inner_entry_transition.cpp  inner_transition.cpp
samples/hsm_book_samples/source/ch4/: cluster_root_state_data_1.cpp  cluster_root_state_data_3.cpp  deferred_transitions.cpp  done_states.cpp  parallel_state_machines.cpp  restarting_states.cpp  reusable_states.cpp  selector_states_with.cpp  selector_states_without.cpp  shared_states_related_owners.cpp  shared_states_unrelated_owners.cpp  sharing_functions_across_states.cpp  state_args.cpp  state_overrides.cpp  state_stack_visitors.cpp  state_value_with.cpp  state_value_without.cpp
samples/hsm_book_samples/source/ch5/: cluster_root_clean_up.cpp
samples/hsm_sample_1_basic/: Player.cpp  Player.h  hsm_sample_1_basic.sln  hsm_sample_1_basic.vcxproj  hsm_sample_1_basic.vcxproj.filters  main.cpp
samples/hsm_wiki_samples/: CMakeLists.txt  README.md  hsm.props  hsm_wiki_samples.sln
samples/hsm_wiki_samples/sample01/: chapter1.cpp  chapter2.cpp  chapter3.cpp  main.cpp  sample01.vcxproj  sample01.vcxproj.filters
samples/hsm_wiki_samples/source/ch2/: ownership_access_owner_privates.cpp  process_state_transitions.cpp  simplest_state_machine.cpp  storing_data.cpp
samples/hsm_wiki_samples/source/ch3/: drawing_hsms.cpp  revisit_update_states.cpp
samples/hsm_wiki_samples/source/ch4/: cluster_root_state_data_1.cpp  cluster_root_state_data_2.cpp  cluster_root_state_data_3.cpp  deferred_transitions_1.cpp  deferred_transitions_2.cpp  restarting_states.cpp  selector_states_with.cpp  selector_states_without.cpp  shared_states_related_owners.cpp  shared_states_unrelated_owners.cpp  state_args.cpp  state_value_with.cpp  state_value_without.cpp
src/: statemachine.cpp
tools/: hsmToDot.py  plotHsm.py
unit_tests/hsm_unit_tests/: .gitignore  CMakeLists.txt  README.md  build_msys2.sh  todo.md
unit_tests/hsm_unit_tests/source/: main.cpp  test_util.h  tests.cpp
